{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 65,
  "lineage": "ccf0c9f2-a21d-5cfd-4ffe-e25b9aa418c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "css_application_load_balancer_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461126874783:listener/app/css-alb/3879681831f94787/94c83f6b10123285",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:461126874783:targetgroup/css-tg/88f7cac119025789",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461126874783:listener/app/css-alb/3879681831f94787/94c83f6b10123285",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:461126874783:loadbalancer/app/css-alb/3879681831f94787",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.css_application_load_balancer_target_group",
            "aws_lb.css_application_load_balancer",
            "aws_security_group.css_security_group",
            "aws_subnet.css_subnet_zone_a",
            "aws_subnet.css_subnet_zone_b",
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "css_application_load_balancer_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461126874783:targetgroup/css-tg/88f7cac119025789",
            "arn_suffix": "targetgroup/css-tg/88f7cac119025789",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 180,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461126874783:targetgroup/css-tg/88f7cac119025789",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "css-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "css-tg"
            },
            "tags_all": {
              "Name": "css-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "dependencies": [
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "css_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:internet-gateway/igw-038a4734cda980b89",
            "id": "igw-038a4734cda980b89",
            "owner_id": "461126874783",
            "tags": {
              "Name": "css-igw"
            },
            "tags_all": {
              "Name": "css-igw"
            },
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "dependencies": [
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "css_application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461126874783:loadbalancer/app/css-alb/3879681831f94787",
            "arn_suffix": "app/css-alb/3879681831f94787",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "css-alb-451364653.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:461126874783:loadbalancer/app/css-alb/3879681831f94787",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "css-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00803ac81134a78d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-061e83d17a092f2c1"
              },
              {
                "subnet_id": "subnet-0f559683ac244fdb1"
              }
            ],
            "subnets": [
              "subnet-061e83d17a092f2c1",
              "subnet-0f559683ac244fdb1"
            ],
            "tags": {
              "Name": "css-alb"
            },
            "tags_all": {
              "Name": "css-alb"
            },
            "vpc_id": "vpc-01c01d632d331c9d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.css_security_group",
            "aws_subnet.css_subnet_zone_a",
            "aws_subnet.css_subnet_zone_b",
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "css_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:route-table/rtb-01a67567f2f6e7da1",
            "id": "rtb-01a67567f2f6e7da1",
            "owner_id": "461126874783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038a4734cda980b89",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "css-rt"
            },
            "tags_all": {
              "Name": "css-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.css_internet_gateway",
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "css_route_table_association_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb01931a01ce51a",
            "route_table_id": "rtb-01a67567f2f6e7da1",
            "subnet_id": "subnet-0f559683ac244fdb1"
          },
          "dependencies": [
            "aws_internet_gateway.css_internet_gateway",
            "aws_route_table.css_route_table",
            "aws_subnet.css_subnet_zone_a",
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "css_route_table_association_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072aad71010a02f4b",
            "route_table_id": "rtb-01a67567f2f6e7da1",
            "subnet_id": "subnet-061e83d17a092f2c1"
          },
          "dependencies": [
            "aws_internet_gateway.css_internet_gateway",
            "aws_route_table.css_route_table",
            "aws_subnet.css_subnet_zone_b",
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "css_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:security-group/sg-00803ac81134a78d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00803ac81134a78d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "css-sg",
            "name_prefix": "",
            "owner_id": "461126874783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "css-sg"
            },
            "tags_all": {
              "Name": "css-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "css_subnet_zone_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:subnet/subnet-0f559683ac244fdb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f559683ac244fdb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461126874783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "css-us-east-1a-subnet"
            },
            "tags_all": {
              "Name": "css-us-east-1a-subnet"
            },
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "dependencies": [
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "css_subnet_zone_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:subnet/subnet-061e83d17a092f2c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061e83d17a092f2c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461126874783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "css-us-east-1b-subnet"
            },
            "tags_all": {
              "Name": "css-us-east-1b-subnet"
            },
            "vpc_id": "vpc-01c01d632d331c9d5"
          },
          "dependencies": [
            "aws_vpc.css_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "css_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461126874783:vpc/vpc-01c01d632d331c9d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-062f73e2aaf19c64c",
            "default_route_table_id": "rtb-061c0e8f30e036969",
            "default_security_group_id": "sg-052803be0da486165",
            "dhcp_options_id": "dopt-05a0e4b01a32efb9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c01d632d331c9d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061c0e8f30e036969",
            "owner_id": "461126874783",
            "tags": {
              "Name": "css-vpc"
            },
            "tags_all": {
              "Name": "css-vpc"
            }
          }
        }
      ]
    }
  ]
}